<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_graph</name>
  <version>0.0.1</version>
  <description>This package describes a behavior modulation that models the environment state in terms of graphs to prevent and avoid collisions and deadlocks in narrow scenarios.</description>
  <maintainer email="jperera@us.es">Javier Perera-Lago</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>navground_sim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
