[develop]
script_dir=$base/lib/navground_graphs
[install]
install_scripts=$base/lib/navground_graphs
[options.entry_points]
navground_scenarios = 
    cro = navground_graphs.scenarios.crowdedcorridor_scenario:CrowdedCorridorScenario
    mal = navground_graphs.scenarios.maltacross_scenario:MaltaCrossScenario
    bow = navground_graphs.scenarios.bowtie_scenario:BowtieScenario
    home = navground_graphs.scenarios.home_scenario:HomeScenario
navground_modulations = 
    gra = navground_graphs.modulation.graphs_modulation:GraphsModulation